--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,13 +1,18 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
-                xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="/WEB-INF/templates/default.xhtml">
     <ui:define name="conteudo">
         <h:form>
-            <p:outputLabel value="TESTE"/>
-            <p:commandButton value="teste"/>
+            <h:panelGrid columns="1" cellpadding="5" style="margin-top: 25px">
+                <p:graphicImage name="mapaCCE.png" width="850px" height="500px"/>
+            </h:panelGrid>
+            <h:panelGrid columns="3" cellpadding="5">
+                <p:graphicImage name="logoDC.png" width="150px" height="130px"/>
+                <p:graphicImage name="logoUEL.png" width="350px" height="100px"/>
+                <p:graphicImage name="logoCCE.png" width="100px" height="100px"/>
+            </h:panelGrid>
         </h:form>
     </ui:define>
 </ui:composition>
