--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -4,52 +4,34 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="/WEB-INF/templates/default.xhtml">
-
     <ui:define name="conteudo">
-        <h:outputText value="Login"/>
-    </ui:define>
-
-    <ui:define name="conteudo">
+        <style>
+          .myFieldset .ui-fieldset, .ui-fieldset .ui-fieldset-legend {
+            background: none;
+            border: none;
+            color: black;
+            font-size: 18px;
+          }
+        </style>
         <f:metadata>
             <f:viewAction action="#{loginController.init}"/>
         </f:metadata>
-
         <h:form id="form" prependId="false">
-            <div class="ui-g">
-                <div class="ui-g-12">
-                    <div class="card">
-                        <p:breadCrumb>
-                            <p:menuitem outcome="/index"/>
-                            <p:menuitem value="Login" disabled="true"/>
-                        </p:breadCrumb>
-
-                        <div class="ui-fluid p-grid">
-                            <p:fieldset legend="Entrar/Login" class="p-col-6 p-md-6">
-                                <div class="ui-fluid p-grid">
-
-                                    <div class="p-col-6 p-md-1">
-                                        <p:outputLabel value="Login:"/>
-                                    </div>
-
-                                    <div class="p-col-6 p-md-2">
-                                        <p:inputText value="#{loginController.usuario.login}"  />
-                                    </div>
-
-                                    <div class="p-col-6 p-md-6"/>
-
-                                    <div class="p-col-6 p-md-1">
-                                        <p:outputLabel value="Senha:"/>
-                                    </div>
-
-                                    <div class="p-col-6 p-md-8">
-                                        <p:inputText value="#{loginController.usuario.senha}" />
-                                    </div>
-                                </div>
-                            </p:fieldset>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <p:fieldset legend="Entrar/Login" style="margin-top: 15px; width: fit-content;"
+                        styleClass="myFieldset">
+                <h:panelGrid columns="2" cellpadding="5" style="margin: 0 auto;">
+                    <p:outputLabel value="E-mail:" for="email"/>
+                    <p:inputText value="#{loginController.usuario.login}" id="email"/>
+                    <p:outputLabel value="Senha:" for="senha"/>
+                    <p:inputText value="#{loginController.usuario.senha}" id="senha"/>
+                </h:panelGrid>
+                <h:panelGrid columns="1" cellpadding="3"
+                             style="margin: 10px auto auto auto">
+                    <p:commandButton value="Entrar" action="#{loginController.verificarCadastro}"
+                                     update="growl, menuSessao"/>
+                    <p:growl id="growl"/>
+                </h:panelGrid>
+            </p:fieldset>
         </h:form>
     </ui:define>
 </ui:composition>
