Centralizando formulário login e cadastro

--- a/src/main/webapp/cadastro.xhtml
+++ b/src/main/webapp/cadastro.xhtml
@@ -15,7 +15,8 @@
         </style>
         <h:form>
             <p:fieldset legend="Cadastro" styleClass="myFieldset"
-                        style="width: fit-content;">
+                        style="margin: auto;
+                        width: 40%;">
                 <h:panelGrid columns="2" cellpadding="5" style="margin: 0 auto;">
                     <p:outputLabel for="nome" value="Nome:"/>
                     <p:inputText id="nome" value="#{cadastroController.usuario.nome}"/>
