--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -17,7 +17,9 @@
             <f:viewAction action="#{loginController.init}"/>
         </f:metadata>
         <h:form id="form" prependId="false">
-            <p:fieldset legend="Entrar/Login" style="margin-top: 15px; width: fit-content;"
+            <p:fieldset legend="Entrar/Login"
+                        style="margin: auto;
+                        width: 30%;"
                         styleClass="myFieldset">
                 <h:panelGrid columns="2" cellpadding="5" style="margin: 0 auto;">
                     <p:outputLabel value="E-mail:" for="email"/>
