--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -25,7 +25,7 @@
                     <p:outputLabel value="E-mail:" for="email"/>
                     <p:inputText value="#{loginController.usuario.login}" id="email"/>
                     <p:outputLabel value="Senha:" for="senha"/>
-                    <p:inputText value="#{loginController.usuario.senha}" id="senha"/>
+                    <p:inputText type="password" value="#{loginController.usuario.senha}" id="senha"/>
                 </h:panelGrid>
                 <h:panelGrid columns="1" cellpadding="3"
                              style="margin: 10px auto auto auto">
